--- a/style.css
+++ b/style.css
@@ -202,14 +202,6 @@
     /* position: relative; */
 }
 
-/* .main-contnet img {
-    display: flex;
-    margin-left: 55%;  
-    justify-content: center;
-    align-items: center; 
-    top: 130px;
-} */
-
 .main-content img {
     display: flex;
     margin-left: 55%;  
@@ -326,8 +318,12 @@
     .main-content h1 {
         text-align: center;
         justify-content: center;
-        font-size: calc(17vw - .05rem);
+        font-size: calc(14vw - .05rem);
         /* width: 500px; */
+    }
+
+    .main-content img{
+        top: 200px;
     }
 
     .main-btn {
