commit on origin

--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@
     display: flex;
     justify-content: center;
     align-items: center; 
-    position: relative;
+    position: absolute;
     top: 130px;
 }
 
