--- a/style.css
+++ b/style.css
@@ -206,8 +206,8 @@
     display: flex;
     justify-content: center;
     align-items: center; 
-    position: absolute;
-    top: 130px;
+    position: relative;
+    top: 30px;
 }
 
 .main-content h1 {
