commit on origin

--- a/style.css
+++ b/style.css
@@ -321,10 +321,10 @@
     /* .main-content img{
         top: -250px;
     } */
-
+/* 
     .main-btn {
         top: 200px;
-    }
+    } */
 }
 
 @media screen and (max-width: 480px) {
