--- a/style.css
+++ b/style.css
@@ -202,13 +202,13 @@
     /* position: relative; */
 }
 
-.main-content img {
+/* .main-content img {
     display: flex;
     justify-content: center;
     align-items: center; 
     position: absolute;
     top: 100px;
-}
+} */
 
 .main-content h1 {
     /* CAVBOTS 7492 */
