--- a/style.css
+++ b/style.css
@@ -202,10 +202,12 @@
     /* position: relative; */
 }
 
-.main-content img {
+.main-contnet img {
+    display: flex;
+    margin-left: 55%;  
     justify-content: center;
     align-items: center; 
-    top: 200px;
+    top: 130px;
 }
 
 .main-content h1 {
@@ -225,6 +227,7 @@
 
 .main-btn {
     font-size: 1.3rem;
+    top: 400px;
     font-weight: 700;
     background-color: var(--darkBlue);
     padding: 14px 32px;
@@ -233,7 +236,7 @@
     border-radius: 4px;
     color: #fff;
     cursor: pointer;
-    position: absolute;
+    position: relative;
     transition: all 0.35s;
     z-index: 2;
 }
@@ -315,15 +318,12 @@
     .main-content h1 {
         text-align: center;
         justify-content: center;
-        font-size: calc(14vw - .05rem);
-    }
-
-    .main-content img{
-        top: 40px;
+        font-size: calc(17vw - .05rem);
+        /* width: 500px; */
     }
 
     .main-btn {
-        top: 400px;
+        top: 380px;
     }
 }
 
