--- a/style.css
+++ b/style.css
@@ -202,14 +202,6 @@
     /* position: relative; */
 }
 
-.main-contnet img {
-    display: flex;
-    margin-left: 55%;  
-    justify-content: center;
-    align-items: center; 
-    top: 130px;
-}
-
 .main-content h1 {
     /* CAVBOTS 7492 */
     font-family: 'sani Sans';
@@ -227,7 +219,7 @@
 
 .main-btn {
     font-size: 1.3rem;
-    top: 400px;
+    top: 415px;
     font-weight: 700;
     background-color: var(--darkBlue);
     padding: 14px 32px;
@@ -291,18 +283,18 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        /* position: relative; */
+        position: relative;
         left: 0%;
     }
     
     .main-content h1 {
         font-size: calc(14vw - .05rem);
         position: absolute;
-        top: 75px;
+        top: -180px;
     }
 
     .main-btn {
-        top: 410px;
+        top: 220px;
         font-size: 1.5rem;
     }
 }
@@ -317,13 +309,12 @@
     
     .main-content h1 {
         text-align: center;
-        justify-content: center;
         font-size: calc(17vw - .05rem);
-        /* width: 500px; */
+        width: 500px;
     }
 
     .main-btn {
-        top: 380px;
+        top: 210px;
     }
 }
 
