--- a/style.css
+++ b/style.css
@@ -217,9 +217,27 @@
     text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
 }
 
+.logo-container {
+    padding: 20px 30px;
+    position: absolute;
+    background-color: inherit;
+    width: 50%;
+  }
+
+  
+.logo-content {
+    display: flex;
+    justify-content: center;
+    margin-top: -23%;
+    align-items: center;
+    flex-direction: column;
+    padding: 35px 35px;
+    position: relative;
+}
+
 .main-btn {
     font-size: 1.3rem;
-    top: 415px;
+    top: 87%;
     font-weight: 700;
     background-color: var(--darkBlue);
     padding: 14px 32px;
@@ -228,7 +246,7 @@
     border-radius: 4px;
     color: #fff;
     cursor: pointer;
-    position: relative;
+    position: absolute;
     transition: all 0.35s;
     z-index: 2;
 }
@@ -293,10 +311,15 @@
         top: -180px;
     }
 
+   .logo-container img{ 
+        width: 250px;
+   }
+
     .main-btn {
         top: 220px;
         font-size: 1.5rem;
     }
+
 }
 
 @media screen and (max-width: 760px) {
