--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@
     padding: 20px 30px;
     position: absolute;
     background-color: inherit;
-    width: 300px;
+    width: 50%;
   }
 
   
@@ -334,6 +334,11 @@
         text-align: center;
         font-size: calc(17vw - .05rem);
         width: 500px;
+        top: 100px;
+    }
+
+    .logo-container img{
+
     }
 
     .main-btn {
