--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@
     text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
 }
 
-.logo-container {
+/* .logo-container {
     padding: 20px 30px;
     position: absolute;
     background-color: inherit;
@@ -233,7 +233,33 @@
     flex-direction: column;
     padding: 35px 35px;
     position: relative;
-}
+} */
+
+.main-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px 30px;
+    border: 5px solid var(--lightBlue);
+    background-color: var(--darkBlue);
+    position: relative;
+    border-radius: 20px;
+  }
+  
+  .main-content h1 {
+    font-family: 'sani Sans';
+    font-style: normal;
+    font-weight: 1000;
+    /* font-size: 14.5rem; */
+    font-size: 10.5rem;
+
+    color: var(--white);
+    top: 70px;
+    position: absolute;
+    text-align: center;
+    text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
+  }
 
 .main-btn {
     font-size: 1.3rem;
