--- a/style.css
+++ b/style.css
@@ -301,16 +301,16 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        position: relative;
+        position: absolute;
         left: 0%;
     }
      
     .main-content h1 {
         font-size: calc(14vw - .05rem);
-        top: -700px;
+        top: 200px;
     }
 
-   .logo-container img{     
+   .logo-container img{ 
         width: 250px;
    }
 
