--- a/style.css
+++ b/style.css
@@ -193,6 +193,7 @@
     /* top: 65px; */
     min-height: 100vh;
     position: relative;
+    flex-wrap: wrap;
 }
 
 .main-content {
@@ -306,8 +307,6 @@
      
     .main-content h1 {
         font-size: calc(14vw - .05rem);
-        position: absolute;
-        top: 200px;
     }
 
    .logo-container img{ 
@@ -333,10 +332,6 @@
         text-align: center;
         font-size: calc(17vw - .05rem);
         width: 500px;
-    }
-
-    .logo-container img{
-
     }
 
     .main-btn {
