--- a/styleSponsors.css
+++ b/styleSponsors.css
@@ -439,7 +439,7 @@
         padding: 5px 10px;
     }
 
-    /* .platinum-box {
+    .platinum-box {
         background-color: var(--white);
         max-width: 800px;
         border: 8px solid var(--lightBlue);
@@ -457,7 +457,7 @@
         margin: 10px auto;
     }
 
-    .gold-box {
+    /* .gold-box {
         background-color: var(--white);
         max-width: 800px;
         border: 8px solid var(--lightBlue);
